--- a/package.json
+++ b/package.json
@@ -2,68 +2,108 @@
   "name": "todo-app",
   "version": "1.0.0",
   "description": "",
-  "main": "Index.js",
+  "private": true,
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env SERVE=true webpack serve",
     "dev": "webpack serve",
     "build": "webpack --mode production --progress --hide-modules",
     "clean": "rd /s /q dist",
-    "tscheck": "tsc"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@pmmmwh/react-refresh-webpack-plugin": "github:pmmmwh/react-refresh-webpack-plugin",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
-    "babel-loader": "^9.1.0",
-    "core-js": "^3.26.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.7.3",
-    "eslint": "^8.30.0",
-    "eslint-config-standard-with-typescript": "^24.0.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-n": "^15.6.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-webpack-plugin": "^3.2.0",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.2",
-    "postcss": "^8.4.20",
-    "postcss-loader": "^7.0.2",
-    "postcss-preset-env": "^7.8.3",
-    "react-refresh": "^0.14.0",
-    "regenerator-runtime": "^0.13.11",
-    "sass": "^1.57.1",
-    "sass-loader": "^13.2.0",
-    "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "typescript": "^4.9.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "tscheck": "tsc",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix"
   },
   "dependencies": {
-    "@types/antd": "^1.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@ant-design/icons": "4.7.0",
+    "antd": "5.0.0",
+    "axios": "1.1.3",
+    "dayjs": "1.11.6",
+    "immutability-helper": "3.1.1",
+    "js-cookie": "3.0.1",
+    "mobx": "6.6.2",
+    "mobx-react": "7.5.3",
+    "mobx-react-lite": "3.4.0",
+    "quill-image-resize-module-react": "3.0.0",
+    "quill-image-uploader": "1.2.2",
+    "react": "18.2.0",
+    "react-dnd": "16.0.1",
+    "react-dnd-html5-backend": "16.0.1",
+    "react-dom": "18.2.0",
+    "react-quill": "2.0.0",
+    "react-quilljs": "1.3.1",
+    "react-router-dom": "6.4.3",
+    "react-toastify": "9.1.1",
+    "styled-components": "5.3.6",
+    "usehooks-ts": "2.9.1"
+  },
+  "devDependencies": {
+    "@babel/core": "7.20.2",
+    "@babel/plugin-transform-runtime": "7.19.6",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.18.6",
+    "@babel/runtime": "7.20.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@svgr/webpack": "6.5.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/antd": "1.0.0",
+    "@types/classnames": "2.3.1",
+    "@types/copy-webpack-plugin": "10.1.0",
+    "@types/crypto-js": "4.1.1",
+    "@types/dotenv-webpack": "7.0.3",
+    "@types/html-webpack-plugin": "3.2.6",
+    "@types/js-cookie": "3.0.2",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
+    "@types/react-router-dom": "5.3.3",
+    "@types/react-toastify": "4.1.0",
+    "@types/webpack": "5.28.0",
+    "@types/webpack-dev-server": "4.7.2",
+    "@types/webpack-env": "1.18.0",
+    "@typescript-eslint/eslint-plugin": "5.42.1",
+    "@typescript-eslint/parser": "5.42.1",
+    "babel-loader": "9.1.0",
+    "babel-plugin-named-asset-import": "0.3.8",
+    "babel-preset-react-app": "10.0.1",
+    "classnames": "2.3.2",
+    "clean-webpack-plugin": "4.0.0",
+    "concurrently": "7.5.0",
+    "copy-webpack-plugin": "11.0.0",
+    "cross-env": "7.0.3",
+    "css-loader": "6.7.1",
+    "dotenv-webpack": "8.0.1",
+    "enzyme": "3.11.0",
+    "eslint": "8.27.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-perf": "3.3.1",
+    "eslint-plugin-simple-import-sort": "8.0.0",
+    "eslint-webpack-plugin": "3.2.0",
+    "file-loader": "6.2.0",
+    "fork-ts-checker-webpack-plugin": "7.2.13",
+    "html-webpack-plugin": "5.5.0",
+    "json-loader": "0.5.7",
+    "mini-css-extract-plugin": "2.6.1",
+    "nodemon": "2.0.20",
+    "postcss-loader": "7.0.1",
+    "react-hook-form": "7.39.3",
+    "react-refresh": "^0.14.0",
+    "resolve-url-loader": "5.0.0",
+    "sass": "1.56.1",
+    "sass-loader": "13.2.0",
+    "style-loader": "3.3.1",
+    "terser-webpack-plugin": "5.3.6",
+    "ts-loader": "9.4.1",
+    "ts-node": "10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "typescript": "4.8.4",
+    "url-loader": "4.1.1",
+    "webpack": "5.75.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.11.1"
   }
 }
