--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "todo-app",
   "version": "1.0.0",
-  "description": "",
-  "private": true,
   "main": "index.js",
   "scripts": {
     "start": "cross-env SERVE=true webpack serve",
-    "dev": "webpack serve",
     "build": "webpack --mode production --progress --hide-modules",
     "clean": "rd /s /q dist",
     "tscheck": "tsc",
@@ -17,23 +14,13 @@
     "@ant-design/icons": "4.7.0",
     "antd": "5.0.0",
     "axios": "1.1.3",
-    "dayjs": "1.11.6",
-    "immutability-helper": "3.1.1",
-    "js-cookie": "3.0.1",
     "mobx": "6.6.2",
     "mobx-react": "7.5.3",
     "mobx-react-lite": "3.4.0",
-    "quill-image-resize-module-react": "3.0.0",
-    "quill-image-uploader": "1.2.2",
     "react": "18.2.0",
-    "react-dnd": "16.0.1",
-    "react-dnd-html5-backend": "16.0.1",
     "react-dom": "18.2.0",
-    "react-quill": "2.0.0",
-    "react-quilljs": "1.3.1",
     "react-router-dom": "6.4.3",
     "react-toastify": "9.1.1",
-    "styled-components": "5.3.6",
     "usehooks-ts": "2.9.1"
   },
   "devDependencies": {
@@ -45,16 +32,11 @@
     "@babel/runtime": "7.20.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@svgr/webpack": "6.5.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "14.4.3",
     "@types/antd": "1.0.0",
     "@types/classnames": "2.3.1",
     "@types/copy-webpack-plugin": "10.1.0",
-    "@types/crypto-js": "4.1.1",
     "@types/dotenv-webpack": "7.0.3",
     "@types/html-webpack-plugin": "3.2.6",
-    "@types/js-cookie": "3.0.2",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -74,7 +56,6 @@
     "copy-webpack-plugin": "11.0.0",
     "cross-env": "7.0.3",
     "css-loader": "6.7.1",
-    "dotenv-webpack": "8.0.1",
     "enzyme": "3.11.0",
     "eslint": "8.27.0",
     "eslint-plugin-import": "2.26.0",
@@ -84,11 +65,10 @@
     "eslint-plugin-simple-import-sort": "8.0.0",
     "eslint-webpack-plugin": "3.2.0",
     "file-loader": "6.2.0",
-    "fork-ts-checker-webpack-plugin": "7.2.13",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "5.5.0",
     "json-loader": "0.5.7",
     "mini-css-extract-plugin": "2.6.1",
-    "nodemon": "2.0.20",
     "postcss-loader": "7.0.1",
     "react-hook-form": "7.39.3",
     "react-refresh": "^0.14.0",
